--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "@types/react-native": "^0.64.4",
+    "protractor": "^7.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.1.1",
+    "react-native-shared-element": "^0.7.0",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^12.1.1",
+    "react-navigation-shared-element": "^3.0.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -28,7 +36,11 @@
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
+    "metro-config": "^0.66.0",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-navigation": "^4.3.7",
+    "react-navigation-stack": "^2.3.11",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
