--- a/package.json
+++ b/package.json
@@ -10,23 +10,34 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-cookies/cookies": "^6.0.7",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@types/react-native": "^0.64.4",
-    "protractor": "^7.0.0",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-dotenv": "^2.5.5",
+    "react-native-draggable-flatlist": "^2.6.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.1.1",
-    "react-native-shared-element": "^0.7.0",
+    "react-native-shared-element": "0.7.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
+    "react-native-webview": "^11.6.3",
     "react-navigation-shared-element": "^3.0.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
