--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-shared-element": "0.7.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.3",
     "react-navigation-shared-element": "^3.0.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
