--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.3",
     "react-navigation-shared-element": "^3.0.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "react-redux": "^7.2.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
